k8s/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: croplands-web
  namespace: croplands
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: croplands-web
  # Pod template
  template:
    metadata:
      labels:
        app: croplands-web
    spec:
      imagePullSecrets:
        - name: dk8s-registry
      containers:
        - name: flask
          image: dk8s-registry.wr.usgs.gov/croplands-web:latest
          imagePullPolicy: Always
          ports: 
            - containerPort: 8000
