k8s/ingress.yml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: croplands-web
  namespace: croplands
  labels:
    app: croplands-web
  annotations:
    nginx.ingress.kubernetes.io/server-snippet: |
      # Accunetix "Password field submitted using GET method"
      # It's just an angular template anyway, so blocking it shouldn't matter
      location = /static/templates/account/login.html {
        deny all;
      }
spec:
  tls:
    - secretName: www-croplands-org-tls
      hosts:
        - croplands.org
        - www.croplands.org
  rules:
    - host: www.croplands.org
      http:
        paths:
          - path: /
            backend:
              serviceName: croplands-web
              servicePort: http
    - host: croplands.org
      http:
        paths:
          - path: /
            backend:
              serviceName: croplands-web
              servicePort: http
